# wirecache

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml  security.yml
benches/: cache_bench.rs
clients/java/: SWCacheClient.java  WireCacheClient.java
clients/javascript/: swcache.js  wirecache.js
clients/python/: swcache.py  wirecache.py
examples/api/: main.py  wirecache_client.py
rules/sast/rust/: rules.yaml
src/: lib.rs  main.rs
src/cache/: mod.rs  stats.rs  store.rs
src/config/: config_file.rs
src/disclaimer/: logo.rs
src/metrics/: printer.rs
src/protocol/: codec.rs  command.rs  mod.rs  response.rs
src/server/: handler.rs  listener.rs
