[package]
name = "wirecache"
version = "0.1.0"
edition = "2021"
description = "High-performance in-memory cache server with a binary TCP protocol, compatible with any language"
license = "MIT"
repository = "https://github.com/leonardo-silva/wirecache"
keywords = ["cache", "server", "tcp", "in-memory", "performance"]
categories = ["caching", "network-programming", "asynchronous"]
readme = "README.md"

[[bin]]
name = "wirecache"
path = "src/main.rs"

[lib]
name = "wirecache"
path = "src/lib.rs"

[[bench]]
name = "cache_bench"
harness = false

[dependencies]
bytesize = "1.3.0"
clearscreen = "3.0.0"
owo-colors = "4.1.0"
sysinfo = { version = "0.32.0", features = ["windows"] }
toml = "0.8.19"
serde = { version = "1.0.210", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Cache LRU concorrente (alta performance, similar ao Caffeine)
moka = { version = "0.12", features = ["future"] }

# Bytes zero-copy
bytes = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
tokio = { version = "1", features = ["full"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
